Adds WPS aggregation link to each dataset.

--- a/cog/templates/cog/search/_record_display.html
+++ b/cog/templates/cog/search/_record_display.html
@@ -145,6 +145,9 @@
 				{% endif %}
 			{% endif %}
 			
+		        &nbsp; [ <strong><a href="javascript:wpsAggregate('{{record.id}}',
+					'{{record.fields.index_node.0}}', '{{record.fields.shard.0}}',
+					'{{project.short_name.lower}}')" >Aggregate</a></strong> ]
 	    </td>
 	  </tr>
 	</table>
