--- a/cog/templates/cog/search/_record_display.html
+++ b/cog/templates/cog/search/_record_display.html
@@ -146,8 +146,8 @@
 			{% endif %}
 			
 		        &nbsp; [ <strong><a href="javascript:wpsAggregate('{{record.id}}',
-					'{{record.fields.index_node.0}}', '{{record.fields.shard.0}}',
-					'{{project.short_name.lower}}')" >Aggregate</a></strong> ]
+					'{{record.fields.index_node.0}}',
+					'{{record.fields.shard.0}}')" >Aggregate</a></strong> ]
 	    </td>
 	  </tr>
 	</table>
