Adds initial WPS configuration page.

--- a/cog/templates/cog/datacart/datacart.html
+++ b/cog/templates/cog/datacart/datacart.html
@@ -15,7 +15,7 @@
 	{% if 'PID_CONFIG'|settings_value %}
 		{% include 'cog/datacart/_pid_js.html' %}
 	{% endif %}
-	{% include 'cog/datacart/_wps_js.html' %}
+	{% include 'cog/wps/_wps_js.html' %}
 
 	<!-- custom spacing of datacart table -->
 	<style scoped type="text/css">
