--- a/cog/templates/cog/search/_record_display.html
+++ b/cog/templates/cog/search/_record_display.html
@@ -145,9 +145,9 @@
 				{% endif %}
 			{% endif %}
 			
-		        &nbsp; [ <strong><a href="javascript:wpsAggregate('{{record.id}}',
+			&nbsp; [ <strong><a href="javascript:wpsService('{{record.id}}',
 					'{{record.fields.index_node.0}}',
-					'{{record.fields.shard.0}}')" >Aggregate</a></strong> ]
+					'{{record.fields.shard.0}}')" >Compute</a></strong> ]
 	    </td>
 	  </tr>
 	</table>
