--- a/cog/templates/cog/search/search.html
+++ b/cog/templates/cog/search/search.html
@@ -12,7 +12,7 @@
 	{% include 'cog/datacart/_las_js.html' %}
 	{% include 'cog/datacart/_go_js.html' %}
         {% include 'cog/datacart/_citation_js.html' %}
-	{% include 'cog/datacart/_wps_js.html' %}
+	{% include 'cog/wps/_wps_js.html' %}
 
 {% endblock %}
 
