--- a/cog/templates/cog/wps/wps.html
+++ b/cog/templates/cog/wps/wps.html
@@ -5,7 +5,7 @@
 {% block extrahead %}
   <script type="text/javascript" src="{% static 'js/d3.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/topojson.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/jquery/jquery-1.4.2.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/jquery/jquery-1.4.4.min.js' %}"></script>
   {% include 'cog/wps/_wps_js.html' %}
 {% endblock %}
 
@@ -13,6 +13,7 @@
 
 <div class="yui-skin-sam">
   <form action="{% url 'wps_process' %}" method="POST">
+    <input type="hidden" name="domain_modified" id="domain_modified" value="false" />
     <input type="hidden" name="files" id="files" value="{{ files|join:',' }}" />
     <table>
       <tr>
@@ -73,15 +74,15 @@
         <td><strong>Time</strong> ({{ time_freq }})</td>
         <td>
           <label for="start">Start</label>
-          <input name="time-start" id="start" type="datetime" value="{{ time.0|date:'SHORT_DATE_FORMAT' }}" />
+          <input name="time-start" id="time-start" type="datetime" value="{{ time.0|date:'Y/m/d g:i:s' }}" />
         </td>
         <td>
           <label for="stop">Stop</label>
-          <input name="time-stop" id="stop" type="datetime" value="{{ time.1|date:'SHORT_DATE_FORMAT' }}" />
+          <input name="time-stop" id="time-stop" type="datetime" value="{{ time.1|date:'Y/m/d g:i:s' }}" />
         </td>
         <td>
           <label for="step">Step</label>
-          <input name="time-step" id="step" type="number" value="1" />
+          <input name="time-step" id="time-step" type="number" value="1" />
         </td>
       </tr>
       <tr>
@@ -111,7 +112,7 @@
         </td>
         <td>
           <label for="lon-step">Step</label>
-          <input name="lon-stop" id="lon-step" type="number" value="1" />
+          <input name="lon-step" id="lon-step" type="number" value="1" />
         </td>
       </tr>
     </table>
