Refactos wps javascript into separate files.

--- a/cog/templates/cog/wps/wps.html
+++ b/cog/templates/cog/wps/wps.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="{% static 'js/d3.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/topojson.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/jquery/jquery-1.4.4.min.js' %}"></script>
-  {% include 'cog/wps/_wps_js.html' %}
+  {% include 'cog/wps/_wps_config_js.html' %}
 {% endblock %}
 
 {% block main %}
