Removes jQuery .ready event for YUI .onDOMReady event to keep libraries to a minimum.

--- a/cog/templates/cog/wps/_wps_config_js.html
+++ b/cog/templates/cog/wps/_wps_config_js.html
@@ -130,7 +130,7 @@ function cartesian(projection, id) {
   return projection([lon, lat]);
 }
 
-$(document).ready(function() {
+YAHOO.util.Event.onDOMReady(function() {
   var dispatcher = d3.dispatch('updateRoi');
 
   load_domains(dispatcher);
