--- a/cog/templates/cog/wps/_wps_config_js.html
+++ b/cog/templates/cog/wps/_wps_config_js.html
@@ -31,6 +31,7 @@
 </style>
 
 <script type="text/javascript">
+
 var domains = [
   { name: 'World', lat: [90, -90],  lon: [0, 360] },
   { name: 'Northern Hemisphere', lat: [90, 0] },
@@ -137,9 +138,15 @@ YAHOO.util.Event.onDOMReady(function() {
 
   load_regrid();
 
-  var width = 960,
-    height = 500,
-    data = { };
+  var node = d3.select('#map').node();
+
+  var rect = node.getBoundingClientRect();
+
+  console.log(rect);
+
+  var width = rect.width;
+  var height = width / 1.92;
+  var data = {};
 
   var f = d3.format('.5r');
 
