Adds regrid support to script generation.

--- a/cog/templates/cog/wps/wps.html
+++ b/cog/templates/cog/wps/wps.html
@@ -48,7 +48,7 @@
           <label for="regrid"><strong>Regrid</strong></label>
         </td>
         <td id="regrid-col">
-          <select id="regrid"></select>
+          <select name="regrid" id="regrid"></select>
         </td>
       </tr>
       <tr>
