Fixes selecting all input tags.

--- a/cog/templates/cog/wps/_wps_config_js.html
+++ b/cog/templates/cog/wps/_wps_config_js.html
@@ -28,7 +28,11 @@
   stroke-width: 0.5px;
 }
 
-td#dimension > input {
+td#dimension > input[type="number"] {
+  width: 95%;
+}
+
+td#dimension > input[type="datetime"] {
   width: 95%;
 }
 
